Polishing key skills

--- a/short.html
+++ b/short.html
@@ -47,13 +47,14 @@
                     <div id="skills" class="column">
                         <h2><a href="#skills">Key skills</a></h2>
                         <ul>
-                            <li><b>Software development</b>: Java, Python, C, C++, Javascript</li>
+                            <li><b>Software development</b>: Java, Javascript, Typescript, Python, C, C++</li>
+                            <li><b>Software infrastructure</b>: Terraform, Kubernetes, Helm</li>
+                            <li><b>Software lifecycle</b>: TDD, CI, CD, observability and monitoring</li>
+                            <li><b>Cloud providers</b>: Azure, AWS</li>
+
                             <li><b>Database engines</b>: SQL, query planning, indexes, performance</li>
                             <li><b>API design</b>: SDKs and libraries, protocol design</li>
                             <li><b>Pragmatic development</b>: experimentation, communication, iteration</li>
-                            <li><b>Software lifecycle</b>: tests, CI, CD, infrastructure</li>
-                            <li><b>Software infrastructure</b>: Terraform, Kubernetes, Helm</li>
-                            <li><b>Cloud providers</b>: Azure, AWS</li>
                         </ul>
                     </div>
                 </div>
