--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                                     <li>developed and improved performance-sensitive software and systems</li>
                                     <li>proposed and guided technical design decisions for a wide range of software components</li>
                                     <li>participated in architecture design reviews, records, risk assessment and change control across teams</li>
+                                    <li>implemented significant changes to the infrastructure-a-code stack</li>
                                     <li>production release management</li>
                                 </ul>
                             </p>
@@ -145,20 +146,12 @@
                     </div>
                     <div class="row">
                         <div class="column">
-                            <p><b>Web developer</b><br>(Symfony2, eZ Publish)</p>
-                            <p><b>Android developer</b><br>Java, JNI</p>
+                            <p><b>Full stack development</b><br>Symfony2, eZ Publish, MySQL, Nginx/Apache2, Angular 1-2, VueJS</p>
+                            <p><b>Android development</b><br>Java, C, JNI</p>
                             <p>
                                 <b>Customer support and maintenance</b> <br>
                                 Some clients I worked with : John Deere, CCI, Orange, Groupe Pichet, FDJ, Kedge BS...
                             </p>
-                            <p><b>Key skills</b></p>
-                            <ul>
-                                <li>Full stack development (DevOps, Nginx/Apache2, Git/Gitflow, PHP, Angular 1-2, VueJS)</li>
-                                <li>Android development</li>
-                                <li>JavaFX</li>
-                                <li>MySQL, PostgreSQL</li>
-                                <li>Independence, ability to keep tight deadlines.</li>
-                            </ul>
                         </div>
                     </div>
                 </article>
