--- a/short.html
+++ b/short.html
@@ -98,7 +98,8 @@
                             <p>
                                 <b>Principal SDE, Technical lead</b>: <i>2021-2025</i><br>
                                 Technical design and performance oriented development for a new generation product.
-                                Architecture design review and records, risk assessment, change control and release management.
+                                Architecture design review and records, risk assessment, change control and release management,
+                                along with significant changes to the IaC stack.
                             </p>
         
                             <p>
@@ -132,9 +133,10 @@
                     </div>
                     <div class="row">
                         <div class="column">
-                            <p><b>Web developer</b><br>(Symfony2, eZ Publish)</p>
-                            <p><b>Android developer</b><br>Java, JNI</p>
-                            <p><b>Full stack development</b><br>DevOps, Nginx/Apache2, Git/Gitflow, PHP, Angular 1-2, VueJS</p>
+                            <p><b>Full stack development</b><br>Symfony2, eZ Publish, MySQL, Nginx/Apache2, Angular 1-2, VueJS</p>
+                            <p><b>Android development</b><br>Java, C, JNI</p>
+                            <p><b>Customer support and maintenance</b> <br>
+                                Some clients I worked with : John Deere, CCI, Orange, Groupe Pichet, FDJ, Kedge BS...</p>
                         </div>
                     </div>
                 </article>
