--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                         <p>As a SDE I have had the opportunity to work on <b>large scale systems, databases, small embedded software, CLI utilities, and shared libraries,</b> although I specialize in storage systems optimizations and <b>performance</b> (be it databases, cloud storage, or local I/O).</p>
                         <p>I have explored a wide range of technologies, from optimizing data storage for large scale <b>datalakes</b> to the <b>fullstack web</b>. My technologies of choice at the moment would be <a href="https://openjdk.org/index.html" target="_blank"><b>Java</b></a> (a forever friend) and <a href="https://duckdb.org/" target="_blank"><b>DuckDB</b></a>.</p>
                         <p>I also found myself working on desktop applications with <a href="https://openjfx.io/" target="_blank"><b>JavaFX</b></a>, <a href="https://libgdx.com/" target="_blank"><b>LibGDX</b></a> or <a href="https://juce.com/" target="_blank"><b>Juce</b></a>.</p>
+                        <p>I am currently learning <a href="https://www.rust-lang.org/" target="_blank">Rust</a> and working on a new <b>functional language</b> prototype.</p>
                     </div>
                 </div>
 
