--- a/short.html
+++ b/short.html
@@ -67,6 +67,8 @@
                         <p>I am a software developer, a science and art enthusiast, and a mountains lover.</p>
                         <p>As a SDE I have had the opportunity to work on <b>large scale systems, databases, small embedded software, CLI utilities, and shared libraries,</b> although I specialize in storage systems optimizations and <b>performance</b> (be it databases, cloud storage, or local I/O).</p>
                         <p>I have explored a wide range of technologies, from optimizing data storage for large scale <b>datalakes</b> to the <b>fullstack web</b>. My technologies of choice at the moment would be <a href="https://openjdk.org/index.html" target="_blank"><b>Java</b></a> (a forever friend) and <a href="https://duckdb.org/" target="_blank"><b>DuckDB</b></a>.</p>
+                        <p>I am currently learning <b><a href="https://www.rust-lang.org/" target="_blank">Rust</a></b> and working on a new <b>functional language</b> prototype.</p>
+
                     </div>
                 </div>
 
