--- a/short.html
+++ b/short.html
@@ -101,7 +101,7 @@
                                 <b>Principal SDE, Technical lead</b>: <i>2021-2025</i><br>
                                 Technical design and performance oriented development for a new generation product.
                                 Architecture design review and records, risk assessment, change control and release management,
-                                along with significant changes to the IaC stack.
+                                along with significant changes to the infrastructure-as-code stack.
                             </p>
         
                             <p>
